--- a/config_sample.env
+++ b/config_sample.env
@@ -1,14 +1,14 @@
 # REQUIRED CONFIG
-BOT_TOKEN = ""
+BOT_TOKEN = "5897330089:AAFQLA2jc9Ohw1NrRuL2APKs00RBXXBn4Fg"
 GDRIVE_FOLDER_ID = ""
-OWNER_ID = 
+OWNER_ID = "1246987713"
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 10
 AUTO_DELETE_MESSAGE_DURATION = 60       
 AUTO_DELETE_UPLOAD_MESSAGE_DURATION = 120  #minimum recommended 120
 IS_TEAM_DRIVE = "True"
-TELEGRAM_API = 
-TELEGRAM_HASH = ""
+TELEGRAM_API "27686895"
+TELEGRAM_HASH = "0e996bd3891969ec5dfebf8bb3e39e94"
 
 # OPTIONAL CONFIG
 DATABASE_URL = ""
