--- a/config_sample.env
+++ b/config_sample.env
@@ -1,13 +1,13 @@
 # REQUIRED CONFIG
 BOT_TOKEN = "5897330089:AAFQLA2jc9Ohw1NrRuL2APKs00RBXXBn4Fg"
 GDRIVE_FOLDER_ID = ""
-OWNER_ID = "1246987713"
+OWNER_ID = 1246987713
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 10
 AUTO_DELETE_MESSAGE_DURATION = 60       
 AUTO_DELETE_UPLOAD_MESSAGE_DURATION = 120  #minimum recommended 120
 IS_TEAM_DRIVE = "True"
-TELEGRAM_API "27686895"
+TELEGRAM_API = 27686895
 TELEGRAM_HASH = "0e996bd3891969ec5dfebf8bb3e39e94"
 
 # OPTIONAL CONFIG
@@ -61,18 +61,18 @@ EQUAL_SPLITS = ""
 TIMEZONE = "Asia/Kolkata"
 
 #Telegraph UI
-TITLE_NAME = "WebX Bots"
-AUTHOR_NAME = "Divin Dass"
-AUTHOR_URL = "https://t.me/WebX_Divin"
+TITLE_NAME = "hyper leech"
+AUTHOR_NAME = "brainaxe"
+AUTHOR_URL = ""
 GD_INFO = ""
 
 # Force Sub Channel
 FSUB = "True"
-CHANNEL_USERNAME = "https://t.me/Web_X_Bots"
-FSUB_CHANNEL_ID = -1001860403687
+CHANNEL_USERNAME = "https://t.me/AnihubYT"
+FSUB_CHANNEL_ID = -1001912544990
 
 # qBittorrent
-BASE_URL_OF_BOT = ""
+BASE_URL_OF_BOT = "https://hyper-leech.onrender.com"
 SERVER_PORT = "80"
 WEB_PINCODE = ""
 QB_SEED = ""
